--- a/libs/wasmedge_sock/Makefile
+++ b/libs/wasmedge_sock/Makefile
@@ -3,6 +3,9 @@ WASI_SDK_VERSION ?= 19.0
 ROOT_DIR := $(dir $(realpath $(lastword $(MAKEFILE_LIST))))
 REPO_ROOT := $(ROOT_DIR)../..
 
+default_target: all
+.PHONY : default_target
+
 include $(REPO_ROOT)/Makefile.helpers
 
-$(eval $(call create_default_lib_targets,$(REPO_ROOT),bundle-wasmlabs,v,$(WASI_SDK_VERSION)))
+$(eval $(call create_default_local_lib_targets,$(REPO_ROOT),wasmedge_sock,$(WASI_SDK_VERSION)))
