--- a/.github/workflows/build-libs-sqlite.yaml
+++ b/.github/workflows/build-libs-sqlite.yaml
@@ -1,4 +1,4 @@
-name: Build Zlib
+name: Build libs-sqlite
 on:
   push:
     # By specifying branches explicitly, we avoid this workflow from
@@ -8,22 +8,19 @@ on:
       - main
     paths:
        - ".github/**"
-       - "libs/zlib/**"
+       - "libs/sqlite/**"
        - "libs/*"
        - "scripts/**"
        - "Makefile*"
        - "*.sh"
   pull_request:
 jobs:
-  build-zlib:
+  build-libs-sqlite:
     strategy:
       fail-fast: false
       matrix:
         include:
-          - version: 1.2.13
+          - version: 3.39.2
     uses: ./.github/workflows/reusable-build-lib.yaml
     with:
-      name: "libz"
-      version: ${{ matrix.version }}
-      target-name: "zlib"
-      target-prefix: "v"
+      target: sqlite/v${{ matrix.version }}
