--- a/.github/workflows/build-libs-zlib.yaml
+++ b/.github/workflows/build-libs-zlib.yaml
@@ -1,4 +1,4 @@
-name: Build Lib Jpeg
+name: Build libs-zlib
 on:
   push:
     # By specifying branches explicitly, we avoid this workflow from
@@ -8,22 +8,19 @@ on:
       - main
     paths:
        - ".github/**"
-       - "libs/libjpeg/**"
+       - "libs/zlib/**"
        - "libs/*"
        - "scripts/**"
        - "Makefile*"
        - "*.sh"
   pull_request:
 jobs:
-  build-libjpeg:
+  build-libs-zlib:
     strategy:
       fail-fast: false
       matrix:
         include:
-          - version: 2.1.5.1
+          - version: 1.2.13
     uses: ./.github/workflows/reusable-build-lib.yaml
     with:
-      name: "libjpeg"
-      version: ${{ matrix.version }}
-      target-name: "libjpeg"
-      target-prefix: "v"
+      target: zlib/v${{ matrix.version }}
