--- a/.github/workflows/release-libs-libjpeg.yaml
+++ b/.github/workflows/release-libs-libjpeg.yaml
@@ -2,16 +2,14 @@
 # created of the form `libs/libjpeg/<version>+<buildinfo>`, where <buildinfo>
 # by convention is YYYYMMDD-<short-sha> (short SHA can be calculated
 # with `git rev-parse --short HEAD`).
-name: Release Lib Jpeg
+name: Release libs-libjpeg
 on:
   push:
     tags:
       - libs/libjpeg/*
 jobs:
-  release-uuid:
-    uses: ./.github/workflows/reusable-release-lib.yaml
+  release-libs-libjpeg:
+    uses: ./.github/workflows/reusable-release-external-lib.yaml
     with:
-      name: "libjpeg"
       target-name: "libjpeg"
-      target-prefix: "v"
       trigger: ${{ github.event.ref }}
