--- a/.github/workflows/release-libs-libxml2.yaml
+++ b/.github/workflows/release-libs-libxml2.yaml
@@ -2,16 +2,14 @@
 # created of the form `libs/libxml2/<version>+<buildinfo>`, where <buildinfo>
 # by convention is YYYYMMDD-<short-sha> (short SHA can be calculated
 # with `git rev-parse --short HEAD`).
-name: Release Lib XML2
+name: Release libs-libxml2
 on:
   push:
     tags:
       - libs/libxml2/*
 jobs:
-  release-libxml2:
-    uses: ./.github/workflows/reusable-release-lib.yaml
+  release-libs-libxml2:
+    uses: ./.github/workflows/reusable-release-external-lib.yaml
     with:
-      name: "libxml2"
       target-name: "libxml2"
-      target-prefix: "v"
       trigger: ${{ github.event.ref }}
