--- a/.github/workflows/release-libs-oniguruma.yaml
+++ b/.github/workflows/release-libs-oniguruma.yaml
@@ -2,16 +2,14 @@
 # created of the form `libs/oniguruma/<version>+<buildinfo>`, where <buildinfo>
 # by convention is YYYYMMDD-<short-sha> (short SHA can be calculated
 # with `git rev-parse --short HEAD`).
-name: Release Lib Oniguruma
+name: Release libs-oniguruma
 on:
   push:
     tags:
       - libs/oniguruma/*
 jobs:
-  release-oniguruma:
-    uses: ./.github/workflows/reusable-release-lib.yaml
+  release-libs-oniguruma:
+    uses: ./.github/workflows/reusable-release-external-lib.yaml
     with:
-      name: "libonig"
       target-name: "oniguruma"
-      target-prefix: "v"
       trigger: ${{ github.event.ref }}
