chore: Update the libs 'make clean' list

--- a/libs/Makefile
+++ b/libs/Makefile
@@ -1,4 +1,12 @@
 .PHONY: clean
 clean:
-	make -C uuid clean
+	make -C bundle_wlr clean
+	make -C icu clean
+	make -C libjpeg clean
+	make -C libpng clean
+	make -C libuuid clean
+	make -C libxml2 clean
+	make -C oniguruma clean
+	make -C sqlite clean
+	make -C wasmedge_sock clean
 	make -C zlib clean
