feat: GH action to build php-wasmedge-8.2.0

--- a/.github/workflows/build-php.yaml
+++ b/.github/workflows/build-php.yaml
@@ -28,6 +28,11 @@ jobs:
             flavor: ""
             build-php-cli: false
             version: 8.2.0
+          - name: wasmedge-php-
+            suffix: "-wasmedge"
+            flavor: ""
+            build-php-cli: false
+            version: 8.2.0
           - name: php-
             suffix: ""
             flavor: -slim
