fix: libpy review comments

--- a/python/tools/wlr-libpy/Cargo.toml
+++ b/python/tools/wlr-libpy/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-wlr-assets = { git = "https://github.com/vmware-labs/webassembly-language-runtimes.git", branch="rust-py-example", optional = true }
+wlr-assets = { path = "../../../tools/wlr-assets", optional = true }
 
 [features]
 
