--- a/python/examples/embedding/wasi-py-rs-pyo3/Cargo.toml
+++ b/python/examples/embedding/wasi-py-rs-pyo3/Cargo.toml
@@ -5,7 +5,11 @@ edition = "2021"
 
 [dependencies]
 pyo3 = { version = "0.19.0", features = ["abi3-py311"] }
-wlr-libpy = { git = "https://github.com/vmware-labs/webassembly-language-runtimes.git", features = ["py_main"] }
+wlr-libpy = { git = "https://github.com/vmware-labs/webassembly-language-runtimes.git", features = [
+    "py_main",
+] }
 
 [build-dependencies]
-wlr-libpy = { git = "https://github.com/vmware-labs/webassembly-language-runtimes.git", features = ["build"] }
+wlr-libpy = { git = "https://github.com/vmware-labs/webassembly-language-runtimes.git", features = [
+    "build",
+] }
