--- a/Dockerfile.wasi-builder
+++ b/Dockerfile.wasi-builder
@@ -1,6 +1,9 @@
 ARG WABT_VERSION=1.0.32
-ARG WASI_SDK_VERSION=19.0
-ARG WASI_SDK_RELEASE_NAME=wasi-sdk-19
+# E.g. WASI_SDK_VERSION=20.0
+ARG WASI_SDK_VERSION
+# E.g. WASI_SDK_RELEASE_NAME=wasi-sdk-20
+ARG WASI_SDK_RELEASE_NAME
+
 # For beta releases with specific features this goes like:
 # ARG WASI_SDK_VERSION=20.0.threads
 # ARG WASI_SDK_RELEASE_NAME=wasi-sdk-20+threads
