--- a/.github/workflows/release-php.yaml
+++ b/.github/workflows/release-php.yaml
@@ -39,6 +39,16 @@ jobs:
             flavor: -slim
             build-php-cli: false
             version: 8.2.0
+          - name: php-
+            suffix: ""
+            flavor: ""
+            build-php-cli: false
+            version: 8.2.6
+          - name: wasmedge-php-
+            suffix: "-wasmedge"
+            flavor: ""
+            build-php-cli: true
+            version: 8.2.6
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
